fix gray naming and base/contrast naming in color variables

--- a/src/scss/globals/variables/_colors.scss
+++ b/src/scss/globals/variables/_colors.scss
@@ -2,21 +2,23 @@
 $primary: var(--wp--preset--color--primary);
 $secondary: var(--wp--preset--color--secondary);
 $accent: var(--wp--preset--color--accent);
-$darkgray: var(--wp--preset--color--dark-gray);
+$gray-dark: var(--wp--preset--color--dark-gray);
 $gray: var(--wp--preset--color--gray);
-$lightgray: var(--wp--preset--color--light-gray);
-$white: var(--wp--preset--color--background);
-$black: var(--wp--preset--color--foreground);
-$error: maroon;
-$warning: orange;
+$gray-light: var(--wp--preset--color--light-gray);
+$base: var(--wp--preset--color--base);
+$contrast: var(--wp--preset--color--contrast);
+$white: $base;
+$black: $contrast;
+$error: Crimson;
+$warning: LemonChiffon;
 $message: lightblue;
 
 /* Functional Color Palette */
 $color__text-main: $primary;
-$color__background-hr: $lightgray;
-$color__background-button: $lightgray;
-$color__background-pre: $lightgray;
-$color__background-ins: #fff9c0;
+$color__background-hr: $gray-light;
+$color__background-button: $gray-light;
+$color__background-pre: $gray-light;
+$color__background-ins: $warning;
 
 $color__border-input: $gray;
 $color__border-abbr: $gray;
